# nes_emulator_rust

./: LICENSE  README.md
nes_emulator/: Cargo.toml
nes_emulator/src/: cpu.rs  lib.rs  main.rs
