[package]
name = "nes_emulator"
version = "0.1.0"
authors = ["Chen Chen <chen.alexander.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nes_emulator_lib"
path = "src/lib.rs"

[dependencies]
simple-error = "0.2"
lazy_static = "1.4.0"